# ngx-stream-nginmesh-dest

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  nginx.mk
config/: mesh.conf  nginx.conf
docker/: Dockerfile.base  Dockerfile.module
module/: config  ngx_ngin_mesh_module.c  ngx_stream_nginmesh_dest_module.c
src/: lib.rs  mesh.rs
test/: deploy.sh  variable_test.rs
test/config/: nginx.conf
test/config/conf.d/: mesh.conf
tests/: variable_test.rs
tests/services/: hello.js  tcp-invoke.js  tcp.js
