[package]
name = "nginmesh"
version = "0.0.1"
authors = ["Sehyo Chang   sehyo@nginx.com"]

[lib]
doctest = false
test = true
crate-type = ["staticlib","rlib"]


[dependencies]
ngx-rust=  { path = "../ngx-rust" , version = "1.13.5" }

[dev-dependencies]
futures = "0.1.14"
hyper = "0.11.2"
tokio-core = "0.1.9"

